--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <h3 id="numberOfObjects" class="btn btn-warning">Número de objetos: 0</h3>
   <br>
   <br>
-  <h3 id="status" class="btn btn-danger"></h3>
+  <h3 id="status" class="btn btn-danger">Status: ...</h3>
 </center>
 
 <div class="footer">
